@startuml

interface Rango {
    --
    addArresto(): void
    verificarRango(): Rango
}

class RangoDetective {
    -nombreRangoActual: String
    -cantidadDeArrestos: int
    -arrestosParaAscender: int
    --
    +addArresto(): void
    -verificarRango(): Rango
}
class RangoNovato {
    -nombreRangoActual: String
    -cantidadDeArrestos: int
    -arrestosParaAscender: int
    --
    +addArresto(): void
    -verificarRango(): Rango
}
class RangoSargento {
    -nombreRangoActual: String
    -cantidadDeArrestos: int
    --
    +addArresto(): void
    -verificarRango(): Rango
}
class RangoInvestigador {
    -nombreRangoActual: String
    -cantidadDeArrestos: int
    -arrestosParaAscender: int
    --
    +addArresto(): void
    -verificarRango(): Rango
}
Rango <|.. RangoDetective
Rango <|.. RangoSargento
Rango <|.. RangoNovato
Rango <|.. RangoInvestigador

@enduml